chore: make java profile decision-oriented