@@ -1,42 +1,42 @@
 ---
 name: java-stack-craft
 description: >
-  Writes and reviews version-appropriate Java stack code by detecting the target JDK from Maven/Gradle, matching local conventions, and applying Spring/Java quality gates.
-  Use when writing, editing, refactoring, or reviewing Java stack code in Maven, Gradle, or Spring Boot projects — including 写/重构/审查 Java 代码, Spring Boot 接口/服务, Java 并发, JDK 兼容性, 依赖注入, 事务, 优化 Java/Spring 项目 requests — especially when JDK compatibility, Spring conventions, dependency injection, concurrency, tests, or application architecture quality matter.
-  Do not use for reproducing/fixing a live JVM incident (use diagnose) or pure what-is-true system investigation (use deep-research) unless the task includes writing or reviewing Java code.
+  Writes and reviews Java stack code by detecting JDK/Spring profile, matching local conventions, and applying Java/Spring quality gates.
+  Use when writing, editing, refactoring, reviewing, or landing an accepted plan into Java stack code in Maven, Gradle, or Spring Boot projects — including 写/重构/审查 Java 代码, 按计划落地 Java 改动, 根据计划实现 Java/Spring 改动, 根据方案实现 Java/Spring 改动, Spring Boot 接口/服务, Java 并发, JDK 兼容性, 依赖注入, 事务, 优化 Java/Spring 项目 requests — especially when JDK compatibility, Spring conventions, dependency injection, concurrency, tests, or application architecture quality matter.
+  Do not use for pure planning, architecture/design discussion, feasibility research, or non-Java implementation unless the task includes writing or reviewing Java stack code; for live JVM incidents use diagnose, and for pure what-is-true system investigation use deep-research.
 ---
 
 # Java Stack Craft
 
-Produce Java that is **modern for its JDK**, **consistent with the project**, **architecturally appropriate** (patterns serve real variation points, never decoration), and **risk-prioritized**. Gates run in order: detect version → conform to conventions → route by production risk → pick idioms/patterns → verify/review. Treat the rules as strong defaults with explainable exceptions; correctness, security, compileability, and concurrency safety are the hard lines.
+Produce Java that is **modern for its JDK**, **consistent with the project**, **architecturally appropriate** (patterns serve real variation points, never decoration), and **risk-prioritized**. Gates run in order: build Java Work Context → conform to conventions → route by production risk → pick idioms/patterns → verify/review. Treat the rules as strong defaults with explainable exceptions; correctness, security, compileability, and concurrency safety are the hard lines.
 
 ## Operating Language
 
 Use these Leitwörter exactly; avoid synonyms that blur the gates.
 
-- **Target Profile**: detected JDK, Spring Boot version, namespace, web stack, and module boundary.
-- **Project Convention**: observed local style or framework pattern that governs the edit unless it creates a defect.
+- **Java Work Context**: repo-profile-backed pre-work packet containing Target Profile, Project Facilities, Risk Candidates, and Verification Floor.
+- **Project Facility**: repo-owned helper, API, or convention relevant to the seam being changed.
 - **Risk Signal**: scanner hit, command output, diff, or code read that points to possible risk, not an action by itself.
 - **Failure Path**: concrete compile, security, correctness, concurrency, resource, runtime, or data-integrity failure that justifies action.
 - **Action Candidate**: bounded fix or review finding competing for the next edit or report slot.
 - **Proof Tier**: P0-P4 verification strength from [RISK_ROUTER.md](RISK_ROUTER.md#proof-tiers).
 - **Verification Floor**: the minimum command, source check, or degraded proof needed before reporting completion.
 
-## Step 1 - Detect the target JDK first (mandatory, once per project)
+## Step 1 - Build Java Work Context first (mandatory for non-trivial work)
 
-Never guess the JDK level. Run the detector **once per project per session** and remember its result (effective JDK, Spring Boot version, `jakarta`/`javax`); only re-run when a build file changes — do not re-run before every edit.
+Never guess the JDK level or project facilities. For non-trivial writing, review, refactoring, or accepted-plan landing, read [WORK_CONTEXT.md](WORK_CONTEXT.md); by default the context command updates the target repo's `docs/agents/java-stack-profile.md`, then reuse the current Java Work Context when the project and touched seam are unchanged; otherwise refresh it once per project session.
 
 ```bash
-python3 scripts/detect_java_profile.py --dir . --format markdown
+python3 <java-stack-craft>/scripts/java_stack.py context --dir <project-root> --format markdown
 ```
 
-On Windows use `python` or `py` if `python3` is unavailable. Pass `--dir <project-root>` when the project is not the current directory. The script is stdlib-only — no extra install needed.
+Resolve `<java-stack-craft>` to this skill directory; `--dir` points at the target project (`.` only if current dir is target). On Windows use `python` or `py` if `python3` is unavailable. The facade is stdlib-only, writes the repo profile by default, and exposes focused `profile`, `facilities`, and `scan` subcommands.
 
-The manifest splits features into **use freely** (final at the target), **preview only** (needs `--enable-preview`; do not emit unless the user opts in), **never use** (withdrawn, e.g. string templates), and **not available** (too new). It also reports the **Spring Boot version and the `jakarta`/`javax` namespace** to use (Step 2). On a multi-module project it warns when modules differ; shared code must compile on the **lowest** version. If no build file is found, ask the user for the target JDK rather than defaulting silently. For the full version→feature reasoning see [REFERENCE.md](REFERENCE.md#jdk-feature-matrix).
+The context includes the Target Profile: features that are **use freely** (final at the target), **preview only**, **never use** (withdrawn, e.g. string templates), and **not available** (too new), plus **Spring Boot version, web stack, and `jakarta`/`javax` namespace**. On multi-module projects, shared code must compile on the **lowest** target. If no build file is found, ask for the target JDK rather than defaulting silently. For feature reasoning see [REFERENCE.md](REFERENCE.md#jdk-feature-matrix).
 
 ## Step 2 - Conform to the project's conventions before applying any default
 
-The defaults below are illustrations of principles, not a house style to impose. Detect what the project already does by reading existing code, and match it — error handling, DTO mapping, package layout (by-feature vs by-layer), naming, config, and test idioms.
+The defaults below are illustrations of principles, not a house style to impose. Start from the Java Work Context, then confirm by reading touched-flow and same-module sibling code; prefer relevant **Project Facilities** before inventing a parallel path. Common examples include logging/alarm, transaction boundaries, pagination/query helpers, mapper/DTO style, JSON/date/id utilities, package layout, naming, config, and test idioms.
 
 If the project uses a framework, detect and follow its conventions first. **Spring Boot projects: actually open and read [SPRING_BOOT.md](SPRING_BOOT.md) before writing or reviewing Spring code** — don't work from memory. It covers the entry style (REST / MVC / WebFlux / GraphQL / messaging / none — never convert one into another), validation approach, and the proxy/transaction/bean rules. The compile-critical `jakarta`/`javax` namespace gate and the web stack (MVC / WebFlux / **mixed**) are already reported by the Step 1 detector; trust the detector for those two facts — they do not require reading SPRING_BOOT.md.
 
@@ -46,11 +46,11 @@ When conventions are absent or inconsistent, prefer the principles below and say
 
 ## Step 2.5 - Route by risk, then choose the mode file
 
-- **Risk routing:** read [RISK_ROUTER.md](RISK_ROUTER.md) for non-trivial work before selecting a fix or ranking findings. Scanner hits and generic best practices are signals, not actions; prefer concrete security, correctness, concurrency, build/runtime, and data-integrity risk over maintainability/style cleanup.
-- **Optional repo profile:** for repeated or non-trivial work in the same repo, or when `docs/agents/java-stack-profile.md` / `docs/agents/java-stack-review-memory.md` exists, read [PROFILE.md](PROFILE.md). Read the repo profile for writing and review; read review memory for review, noisy maintainability cleanup, or explicit memory updates. These files are soft dependencies: use them to sharpen context and reduce review noise, but verify load-bearing facts from build files, code, and commands.
+- **Risk routing:** read [RISK_ROUTER.md](RISK_ROUTER.md) for non-trivial work before selecting a fix or ranking findings. Work Context scanner hits and generic best practices are signals, not actions; prefer concrete security, correctness, concurrency, build/runtime, and data-integrity risk over maintainability/style cleanup.
+- **Repo profile:** read [PROFILE.md](PROFILE.md). The context command creates or updates `docs/agents/java-stack-profile.md` by default; read it for writing and review, and refresh it when its freshness keys no longer match the task. Read `docs/agents/java-stack-review-memory.md` only for review, noisy maintainability cleanup, or explicit memory updates. These files are soft dependencies: use them to sharpen context and reduce review noise, but verify load-bearing facts from build files, code, and commands.
 - **Writing/editing/refactoring:** read [WRITING.md](WRITING.md) before editing. It defines smoke patch vs production fix vs architecture fix, dirty-worktree handling, advisory scanning, and the writing output contract.
 - **Reviewing:** read [REVIEW.md](REVIEW.md) before reporting findings. It defines diff review vs focused review vs repo audit, evidence levels, severity calibration, and the review output format.
-- **Optional advisory scan:** for non-trivial Spring/Java stack work, run `python3 scripts/java_advisory_scan.py --dir . --format markdown`. The scan is a Risk Signal index, not an oracle; confirm important findings from code and context. Markdown output is bounded by default; use `--detail-limit 0` only when the full table is worth the noise. It emits Proof Tiers, exits 0 by default, and only gates when called with `--fail-on`.
+- **Focused scan:** when the context needs narrower evidence, run `<java-stack-craft>/scripts/java_stack.py scan --dir <project-root> --format markdown`. The scan is a Risk Signal index, not an oracle; confirm important findings from code and context. It emits Proof Tiers, exits 0 by default, and only gates when called with `--fail-on`.
 
 ## Step 3 - Write to the version, not below it
 
